--- a/artifacts/galaxy/galaxy_os_install.yml
+++ b/artifacts/galaxy/galaxy_os_install.yml
@@ -3,6 +3,10 @@
   connection: local
   vars:
      vnode_prefix: vnode-
+  pre_tasks:
+    - set_fact:
+        galaxy_flavor: 'galaxy-no-tools'
+      when: galaxy_flavor == 'galaxy-minimal'
   roles:
     - role: indigo-dc.galaxycloud-os
       GALAXY_ADMIN_EMAIL: "{{ galaxy_admin }}"
